--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="description" content="Search for thousands of Islamic books from the most popular bookstores. Zakariyya Books, Ismaeel Books, Al-Hidayah, Al-Badr, Kunuz, and more.">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		%sveltekit.head%
 		<link rel="preconnect" href="https://fonts.googleapis.com">
