added auto refresh to maintenence page

--- a/static/maintenance.html
+++ b/static/maintenance.html
@@ -143,6 +143,12 @@
             }
         }
     </style>
+    <script>
+        // keep refreshing every 10 seconds 
+        setInterval(() => {
+            window.location.reload();
+        }, 5000);
+    </script>
 </head>
 <body>
     <div class="container">
